Plugin Name: Protected Content
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.0.4.3
----------------------------------------------------------------------
- Fix protection of menu-items when user has multiple memberships
- Fix permission issues with protection shortcode
- Fix small bugs with several shortcodes

1.0.4.2
----------------------------------------------------------------------
- Add new Add-on to replace whole menus per membership-level
- Some small bugfixes

1.0.4.1
----------------------------------------------------------------------
- Fix error when testing memberships
- Fix PHP notices

1.0.4
----------------------------------------------------------------------
- Add new Add-on that allows to disable Multiple-Membership mode
- Add new Add-on to change protection of special pages (e.g. search results)
- Add Simulation Infos to explain which rule protected a certain page
- Fix default protection of special pages
- Fix assignment of private memberships via members-list
- Fix membership status-flag in database
- Fix access to unprotected pages is now possible

1.0.3
----------------------------------------------------------------------
- Fix member model fields not persisting

1.0.2
----------------------------------------------------------------------
- Add class to page body to indentify membership of the current user
- Add option to send different email when registering for a free membership
- Fix image-url of loading animation in one css file
- Fix logout word showing in protected-content page
- Fix undefined variable in members model
- Fix credit card info text

1.0.1
----------------------------------------------------------------------
- Fix slow Ajax Login
- Add handler for password reset
- Fix orphan children when deleting parent membership
- Refactories

1.0.0
----------------------------------------------------------------------
- Initial version.